# suga-templates

./: .gitignore  README.md
.github/: dependabot.yml
go/standard/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  suga.yaml
go/standard/suga/: client.go
java-springboot/: .dockerignore  Dockerfile  README.md  pom.xml  suga.yaml
java-springboot/src/main/java/com/example/helloworldapi/: HelloWorldApiApplication.java  SimpleHttpServer.java
java-springboot/src/main/java/com/example/helloworldapi/controller/: HelloWorldController.java
java-springboot/src/main/resources/: application.properties
java-springboot/suga_gen/: GeneratedSugaClient.java
kotlin-ktor/: .dockerignore  Dockerfile  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  suga.yaml
kotlin-ktor/src/main/kotlin/com/example/helloworldapi/: Application.kt
kotlin-ktor/src/main/resources/: application.conf
kotlin-ktor/suga_gen/: GeneratedSugaClient.kt
python/django/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  gunicorn.conf.py  manage.py  requirements.txt  suga.yaml
python/django/django_app/: __init__.py  settings.py  urls.py  views.py
python/django/suga_gen/: client.py
python/uv/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  suga.yaml
python/uv/suga_gen/: client.py
typescript/express/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.ts  package-lock.json  package.json  suga.yaml
typescript/express/suga/client/: index.ts
